src/test/resources/frontend/fail/enumSet.skill
fail {
	set<E> f;
}

enum E {
	a,b;
}